<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context=".activities.SettingsActivity" android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:padding="20dp" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/sort_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioSortName" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/sort_list_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioSortPriority" android:layout_weight="1"/>
    </RadioGroup>
    <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/switchAscending" android:layout_weight="1"
            android:layout_marginTop="0dp" android:layout_marginEnd="20dp" android:layout_marginStart="20dp"
            android:showText="false"/>
</LinearLayout>