<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical" android:layout_margin="15dp">


    <TextView
            android:id="@+id/todoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/item_description" android:autofillHints=""/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView
                android:text="@string/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/priorityText" android:layout_weight="0"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:max="10"
                android:progress="1" android:layout_weight="1"/>
        <TextView
                android:text=""
                android:layout_width="20dp"
                android:layout_height="wrap_content" android:id="@+id/priorityValue" android:layout_weight="0"
                android:textAlignment="textEnd"
        />
    </LinearLayout>
    <Button
            android:id="@+id/submitTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_item"
            android:layout_gravity="end"
    />

</LinearLayout>
